--- a/tests/notebooks/test_oligo_selection.ipynb
+++ b/tests/notebooks/test_oligo_selection.ipynb
@@ -244,6 +244,337 @@
             "padlock_sequence_designer = PadlockSequenceDesigner(detect_oligo_length_min, detect_oligo_length_max, detect_oligo_Tm_opt, Tm_parameters, Tm_correction_parameters)\n",
             "padlock_sequence_designer.design_padlocks(database)"
          ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 8,
+         "metadata": {},
+         "outputs": [
+            {
+               "data": {
+                  "text/html": [
+                     "<div>\n",
+                     "<style scoped>\n",
+                     "    .dataframe tbody tr th:only-of-type {\n",
+                     "        vertical-align: middle;\n",
+                     "    }\n",
+                     "\n",
+                     "    .dataframe tbody tr th {\n",
+                     "        vertical-align: top;\n",
+                     "    }\n",
+                     "\n",
+                     "    .dataframe thead th {\n",
+                     "        text-align: right;\n",
+                     "    }\n",
+                     "</style>\n",
+                     "<table border=\"1\" class=\"dataframe\">\n",
+                     "  <thead>\n",
+                     "    <tr style=\"text-align: right;\">\n",
+                     "      <th></th>\n",
+                     "      <th>region_id</th>\n",
+                     "      <th>oligo_id</th>\n",
+                     "      <th>sequence</th>\n",
+                     "      <th>chromosome</th>\n",
+                     "      <th>start</th>\n",
+                     "      <th>end</th>\n",
+                     "      <th>strand</th>\n",
+                     "      <th>length</th>\n",
+                     "      <th>additional_information_fasta</th>\n",
+                     "      <th>GC_content</th>\n",
+                     "      <th>melting_temperature</th>\n",
+                     "      <th>melt_temp_arm1</th>\n",
+                     "      <th>melt_temp_arm2</th>\n",
+                     "      <th>melt_temp_dif_arms</th>\n",
+                     "      <th>ligation_site</th>\n",
+                     "    </tr>\n",
+                     "  </thead>\n",
+                     "  <tbody>\n",
+                     "    <tr>\n",
+                     "      <th>0</th>\n",
+                     "      <td>AGRN</td>\n",
+                     "      <td>AGRN_pid77</td>\n",
+                     "      <td>CACAGCGTCAGTGAAAGTCGTCCTTGTCTCAGAATGAC</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1055821], [1055821]]</td>\n",
+                     "      <td>[[1055859], [1055859]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>38</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>50.00</td>\n",
+                     "      <td>62.17</td>\n",
+                     "      <td>48.32</td>\n",
+                     "      <td>48.50</td>\n",
+                     "      <td>0.18</td>\n",
+                     "      <td>18</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>1</th>\n",
+                     "      <td>AGRN</td>\n",
+                     "      <td>AGRN_pid78</td>\n",
+                     "      <td>ACAGCGTCAGTGAAAGTCGTCCTTGTCTCAGAATGACC</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1055822], [1055822]]</td>\n",
+                     "      <td>[[1055860], [1055860]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>38</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>50.00</td>\n",
+                     "      <td>63.02</td>\n",
+                     "      <td>48.01</td>\n",
+                     "      <td>48.24</td>\n",
+                     "      <td>0.23</td>\n",
+                     "      <td>18</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>2</th>\n",
+                     "      <td>AGRN</td>\n",
+                     "      <td>AGRN_pid80</td>\n",
+                     "      <td>GTGGGGCTGGGTGCCGTGTTACTAACTCTAGTATGTTT</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1056037], [1056037]]</td>\n",
+                     "      <td>[[1056075], [1056075]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>38</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>50.00</td>\n",
+                     "      <td>62.95</td>\n",
+                     "      <td>46.82</td>\n",
+                     "      <td>48.07</td>\n",
+                     "      <td>1.25</td>\n",
+                     "      <td>13</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>3</th>\n",
+                     "      <td>AGRN</td>\n",
+                     "      <td>AGRN_pid240</td>\n",
+                     "      <td>CTGGGTGCCGTGTTACTAACTCTAGTATGTTTCTGTGTCAAT</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1056043], [1056043]]</td>\n",
+                     "      <td>[[1056085], [1056085]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>42</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>42.86</td>\n",
+                     "      <td>60.77</td>\n",
+                     "      <td>48.35</td>\n",
+                     "      <td>47.76</td>\n",
+                     "      <td>0.59</td>\n",
+                     "      <td>16</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>4</th>\n",
+                     "      <td>AGRN</td>\n",
+                     "      <td>AGRN_pid241</td>\n",
+                     "      <td>TGGGTGCCGTGTTACTAACTCTAGTATGTTTCTGTGTCAATC</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1056044], [1056044]]</td>\n",
+                     "      <td>[[1056086], [1056086]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>42</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>42.86</td>\n",
+                     "      <td>60.74</td>\n",
+                     "      <td>48.57</td>\n",
+                     "      <td>48.32</td>\n",
+                     "      <td>0.25</td>\n",
+                     "      <td>17</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>...</th>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "      <td>...</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>672</th>\n",
+                     "      <td>MIB2</td>\n",
+                     "      <td>MIB2_pid4941</td>\n",
+                     "      <td>CAGGTACCAAAATGGAACTACTTCCACCAATCCCTAAACAAATG</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1614176]]</td>\n",
+                     "      <td>[[1614220]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>44</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>40.91</td>\n",
+                     "      <td>60.45</td>\n",
+                     "      <td>48.12</td>\n",
+                     "      <td>48.99</td>\n",
+                     "      <td>0.87</td>\n",
+                     "      <td>22</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>673</th>\n",
+                     "      <td>MIB2</td>\n",
+                     "      <td>MIB2_pid4947</td>\n",
+                     "      <td>GGACCTTCTCCGGAAGTACGCAATGTCTACAATTAAGAaatgag</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1614689]]</td>\n",
+                     "      <td>[[1614733]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>44</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>43.18</td>\n",
+                     "      <td>60.87</td>\n",
+                     "      <td>48.41</td>\n",
+                     "      <td>48.74</td>\n",
+                     "      <td>0.33</td>\n",
+                     "      <td>18</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>674</th>\n",
+                     "      <td>MIB2</td>\n",
+                     "      <td>MIB2_pid4948</td>\n",
+                     "      <td>GACCTTCTCCGGAAGTACGCAATGTCTACAATTAAGAaatgaga</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1614690]]</td>\n",
+                     "      <td>[[1614734]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>44</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>40.91</td>\n",
+                     "      <td>60.46</td>\n",
+                     "      <td>47.01</td>\n",
+                     "      <td>47.77</td>\n",
+                     "      <td>0.76</td>\n",
+                     "      <td>18</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>675</th>\n",
+                     "      <td>MIB2</td>\n",
+                     "      <td>MIB2_pid4949</td>\n",
+                     "      <td>CCTTCTCCGGAAGTACGCAATGTCTACAATTAAGAaatgagagg</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1614692]]</td>\n",
+                     "      <td>[[1614736]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>44</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>43.18</td>\n",
+                     "      <td>60.77</td>\n",
+                     "      <td>47.00</td>\n",
+                     "      <td>48.10</td>\n",
+                     "      <td>1.10</td>\n",
+                     "      <td>17</td>\n",
+                     "    </tr>\n",
+                     "    <tr>\n",
+                     "      <th>676</th>\n",
+                     "      <td>MIB2</td>\n",
+                     "      <td>MIB2_pid4950</td>\n",
+                     "      <td>GACCTTCTCCGGAAGTACGCAATGTCTACAATTAAGAaatgagag</td>\n",
+                     "      <td>[[1]]</td>\n",
+                     "      <td>[[1614690]]</td>\n",
+                     "      <td>[[1614735]]</td>\n",
+                     "      <td>+</td>\n",
+                     "      <td>45</td>\n",
+                     "      <td>NaN</td>\n",
+                     "      <td>42.22</td>\n",
+                     "      <td>60.56</td>\n",
+                     "      <td>47.01</td>\n",
+                     "      <td>48.52</td>\n",
+                     "      <td>1.51</td>\n",
+                     "      <td>18</td>\n",
+                     "    </tr>\n",
+                     "  </tbody>\n",
+                     "</table>\n",
+                     "<p>677 rows × 15 columns</p>\n",
+                     "</div>"
+                  ],
+                  "text/plain": [
+                     "    region_id      oligo_id                                       sequence   \n",
+                     "0        AGRN    AGRN_pid77         CACAGCGTCAGTGAAAGTCGTCCTTGTCTCAGAATGAC  \\\n",
+                     "1        AGRN    AGRN_pid78         ACAGCGTCAGTGAAAGTCGTCCTTGTCTCAGAATGACC   \n",
+                     "2        AGRN    AGRN_pid80         GTGGGGCTGGGTGCCGTGTTACTAACTCTAGTATGTTT   \n",
+                     "3        AGRN   AGRN_pid240     CTGGGTGCCGTGTTACTAACTCTAGTATGTTTCTGTGTCAAT   \n",
+                     "4        AGRN   AGRN_pid241     TGGGTGCCGTGTTACTAACTCTAGTATGTTTCTGTGTCAATC   \n",
+                     "..        ...           ...                                            ...   \n",
+                     "672      MIB2  MIB2_pid4941   CAGGTACCAAAATGGAACTACTTCCACCAATCCCTAAACAAATG   \n",
+                     "673      MIB2  MIB2_pid4947   GGACCTTCTCCGGAAGTACGCAATGTCTACAATTAAGAaatgag   \n",
+                     "674      MIB2  MIB2_pid4948   GACCTTCTCCGGAAGTACGCAATGTCTACAATTAAGAaatgaga   \n",
+                     "675      MIB2  MIB2_pid4949   CCTTCTCCGGAAGTACGCAATGTCTACAATTAAGAaatgagagg   \n",
+                     "676      MIB2  MIB2_pid4950  GACCTTCTCCGGAAGTACGCAATGTCTACAATTAAGAaatgagag   \n",
+                     "\n",
+                     "    chromosome                   start                     end strand  length   \n",
+                     "0        [[1]]  [[1055821], [1055821]]  [[1055859], [1055859]]      +      38  \\\n",
+                     "1        [[1]]  [[1055822], [1055822]]  [[1055860], [1055860]]      +      38   \n",
+                     "2        [[1]]  [[1056037], [1056037]]  [[1056075], [1056075]]      +      38   \n",
+                     "3        [[1]]  [[1056043], [1056043]]  [[1056085], [1056085]]      +      42   \n",
+                     "4        [[1]]  [[1056044], [1056044]]  [[1056086], [1056086]]      +      42   \n",
+                     "..         ...                     ...                     ...    ...     ...   \n",
+                     "672      [[1]]             [[1614176]]             [[1614220]]      +      44   \n",
+                     "673      [[1]]             [[1614689]]             [[1614733]]      +      44   \n",
+                     "674      [[1]]             [[1614690]]             [[1614734]]      +      44   \n",
+                     "675      [[1]]             [[1614692]]             [[1614736]]      +      44   \n",
+                     "676      [[1]]             [[1614690]]             [[1614735]]      +      45   \n",
+                     "\n",
+                     "     additional_information_fasta  GC_content  melting_temperature   \n",
+                     "0                             NaN       50.00                62.17  \\\n",
+                     "1                             NaN       50.00                63.02   \n",
+                     "2                             NaN       50.00                62.95   \n",
+                     "3                             NaN       42.86                60.77   \n",
+                     "4                             NaN       42.86                60.74   \n",
+                     "..                            ...         ...                  ...   \n",
+                     "672                           NaN       40.91                60.45   \n",
+                     "673                           NaN       43.18                60.87   \n",
+                     "674                           NaN       40.91                60.46   \n",
+                     "675                           NaN       43.18                60.77   \n",
+                     "676                           NaN       42.22                60.56   \n",
+                     "\n",
+                     "     melt_temp_arm1  melt_temp_arm2  melt_temp_dif_arms  ligation_site  \n",
+                     "0             48.32           48.50                0.18             18  \n",
+                     "1             48.01           48.24                0.23             18  \n",
+                     "2             46.82           48.07                1.25             13  \n",
+                     "3             48.35           47.76                0.59             16  \n",
+                     "4             48.57           48.32                0.25             17  \n",
+                     "..              ...             ...                 ...            ...  \n",
+                     "672           48.12           48.99                0.87             22  \n",
+                     "673           48.41           48.74                0.33             18  \n",
+                     "674           47.01           47.77                0.76             18  \n",
+                     "675           47.00           48.10                1.10             17  \n",
+                     "676           47.01           48.52                1.51             18  \n",
+                     "\n",
+                     "[677 rows x 15 columns]"
+                  ]
+               },
+               "metadata": {},
+               "output_type": "display_data"
+            }
+         ],
+         "source": [
+            "import pandas as pd\n",
+            "\n",
+            "df = pd.read_csv(\"/Users/francesco/Documents/Work/Oligo/oligo-designer-toolsuite/data/tests/oligo_selection/oligos_info.tsv\", index_col=None, sep='\\t')\n",
+            "feat = [\"chromosome\", \"start\", \"end\"]\n",
+            "df = df.apply(\n",
+            "            lambda col: col.apply(\n",
+            "                lambda x: (\n",
+            "                    eval(x)\n",
+            "                    if isinstance(x, str) and x.startswith(\"[\") and x.endswith(\"]\")\n",
+            "                    else ([int(x)] if isinstance(x, str) and x.isdigit() else x)\n",
+            "                )\n",
+            "            )\n",
+            "        )\n",
+            "def make_list(x):\n",
+            "    if type(x) is list:\n",
+            "        return [make_list(elem) for elem in x]\n",
+            "    return [x]\n",
+            "for f in feat:\n",
+            "    df[f] = df[f].apply(make_list)\n",
+            "display(df)\n",
+            "df.to_csv(\"/Users/francesco/Documents/Work/Oligo/oligo-designer-toolsuite/data/tests/oligo_selection/oligos_info_2.tsv\", sep='\\t', index=False)\n"
+         ]
       }
    ],
    "metadata": {
@@ -262,7 +593,7 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.10.4 (main, Mar 31 2022, 08:41:55) [GCC 7.5.0]"
+         "version": "3.9.17"
       },
       "orig_nbformat": 4,
       "vscode": {
