Renamed filters to SelfComplementFilter and ComplementFilter

--- a/tests/notebooks/test_oligo_property_filter.ipynb
+++ b/tests/notebooks/test_oligo_property_filter.ipynb
@@ -37,7 +37,7 @@
             "    GCContentFilter,\n",
             "    GCClampFilter,\n",
             "    MeltingTemperatureNNFilter,\n",
-            "    HomodimerFilter,\n",
+            "    SelfComplementFilter,\n",
             "    SecondaryStructureFilter,\n",
             ")\n",
             "from oligo_designer_toolsuite.oligo_property_filter import PadlockArmsFilter\n",
