--- a/tests/notebooks/test_oligo_selection.ipynb
+++ b/tests/notebooks/test_oligo_selection.ipynb
@@ -2,7 +2,7 @@
    "cells": [
       {
          "cell_type": "code",
-         "execution_count": 2,
+         "execution_count": null,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -14,7 +14,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 3,
+         "execution_count": null,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -61,7 +61,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 4,
+         "execution_count": null,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -175,7 +175,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 15,
+         "execution_count": null,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -242,19 +242,9 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 73,
+         "execution_count": null,
          "metadata": {},
-         "outputs": [
-            {
-               "name": "stdout",
-               "output_type": "stream",
-               "text": [
-                  "Score: 0.7088571428571432\n",
-                  "61.07 55.56\n",
-                  "Score: 0.7088571428571432\n"
-               ]
-            }
-         ],
+         "outputs": [],
          "source": [
             "TM_PARAMETERS = {\n",
             "    \"check\": True, #default\n",
@@ -307,7 +297,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 33,
+         "execution_count": null,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -378,7 +368,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 15,
+         "execution_count": null,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -437,30 +427,9 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 38,
+         "execution_count": null,
          "metadata": {},
-         "outputs": [
-            {
-               "name": "stdout",
-               "output_type": "stream",
-               "text": [
-                  "        oligo1  oligo2  oligo3  oligo4  oligo5  oligo6\n",
-                  "oligo1       0       1       1       1       1       1\n",
-                  "oligo2       1       0       1       1       1       0\n",
-                  "oligo3       1       1       0       0       0       1\n",
-                  "oligo4       1       1       0       0       0       1\n",
-                  "oligo5       1       1       0       0       0       1\n",
-                  "oligo6       1       0       1       1       1       0\n",
-                  "        oligo1  oligo2  oligo3  oligo4  oligo5  oligo6\n",
-                  "oligo1       0       1       1       1       1       1\n",
-                  "oligo2       1       0       1       1       1       0\n",
-                  "oligo3       1       1       0       0       0       1\n",
-                  "oligo4       1       1       0       0       0       1\n",
-                  "oligo5       1       1       0       0       0       1\n",
-                  "oligo6       1       0       1       1       1       0\n"
-               ]
-            }
-         ],
+         "outputs": [],
          "source": [
             "# Test example\n",
             "database_region = {\n",
@@ -499,6 +468,185 @@
             "overlapping_matrix = calculator._get_overlapping_matrix(database_region)\n",
             "print(overlapping_matrix)"
          ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 1,
+         "metadata": {},
+         "outputs": [
+            {
+               "name": "stderr",
+               "output_type": "stream",
+               "text": [
+                  "/Users/lisa.barros/anaconda3/envs/odt_test/lib/python3.10/site-packages/Bio/Application/__init__.py:40: BiopythonDeprecationWarning: The Bio.Application modules and modules relying on it have been deprecated.\n",
+                  "\n",
+                  "Due to the on going maintenance burden of keeping command line application\n",
+                  "wrappers up to date, we have decided to deprecate and eventually remove these\n",
+                  "modules.\n",
+                  "\n",
+                  "We instead now recommend building your command line and invoking it directly\n",
+                  "with the subprocess module.\n",
+                  "  warnings.warn(\n"
+               ]
+            }
+         ],
+         "source": [
+            "import os\n",
+            "import shutil\n",
+            "import unittest\n",
+            "\n",
+            "import pandas as pd\n",
+            "\n",
+            "from scipy.sparse import csr_matrix\n",
+            "from Bio.SeqUtils import MeltingTemp as mt\n",
+            "\n",
+            "from oligo_designer_toolsuite.database import OligoDatabase\n",
+            "from oligo_designer_toolsuite.oligo_efficiency_filter import (\n",
+            "    LowestSetScoring,\n",
+            "    WeightedTmGCOligoScoring,\n",
+            ")\n",
+            "from oligo_designer_toolsuite.oligo_selection import (\n",
+            "    OligosetGeneratorIndependentSet,\n",
+            "    heuristic_selection_independent_set,\n",
+            ")\n",
+            "\n",
+            "############################################\n",
+            "# Global Parameters\n",
+            "############################################\n",
+            "\n",
+            "FILE_DATABASE = \"../data/oligo_selection/oligos_info.tsv\"\n",
+            "\n",
+            "TM_PARAMETERS = {\n",
+            "    \"check\": True,  # default\n",
+            "    \"strict\": True,  # default\n",
+            "    \"c_seq\": None,  # default\n",
+            "    \"shift\": 0,  # default\n",
+            "    \"nn_table\": getattr(mt, \"DNA_NN3\"),\n",
+            "    \"tmm_table\": getattr(mt, \"DNA_TMM1\"),\n",
+            "    \"imm_table\": getattr(mt, \"DNA_IMM1\"),\n",
+            "    \"de_table\": getattr(mt, \"DNA_DE1\"),\n",
+            "    \"dnac1\": 50,  # [nM]\n",
+            "    \"dnac2\": 0,  # [nM]\n",
+            "    \"selfcomp\": False,  # default\n",
+            "    \"saltcorr\": 7,  # Owczarzy et al. (2008)\n",
+            "    \"Na\": 1.25,  # [mM]\n",
+            "    \"K\": 75,  # [mM]\n",
+            "    \"Tris\": 20,  # [mM]\n",
+            "    \"Mg\": 10,  # [mM]\n",
+            "    \"dNTPs\": 0,  # [mM] default\n",
+            "}\n",
+            "\n",
+            "TM_PARAMETERS_CHEM_CORR = {\n",
+            "    \"DMSO\": 0,  # default\n",
+            "    \"fmd\": 20,\n",
+            "    \"DMSOfactor\": 0.75,  # default\n",
+            "    \"fmdfactor\": 0.65,  # default\n",
+            "    \"fmdmethod\": 1,  # default\n",
+            "    \"GC\": None,  # default\n",
+            "}"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 2,
+         "metadata": {},
+         "outputs": [],
+         "source": [
+            "tmp_path = \"./\"\n",
+            "oligo_database = OligoDatabase(\n",
+            "    min_oligos_per_region=2,\n",
+            "    write_regions_with_insufficient_oligos=True,\n",
+            "    dir_output=tmp_path,\n",
+            ")\n",
+            "oligo_database.load_database_from_table(FILE_DATABASE)\n",
+            "\n",
+            "oligo_scoring = WeightedTmGCOligoScoring(\n",
+            "    Tm_min=52,\n",
+            "    Tm_opt=60,\n",
+            "    Tm_max=67,\n",
+            "    GC_content_min=40,\n",
+            "    GC_content_opt=50,\n",
+            "    GC_content_max=60,\n",
+            "    Tm_parameters=TM_PARAMETERS,\n",
+            "    Tm_chem_correction_parameters=TM_PARAMETERS_CHEM_CORR,\n",
+            ")\n",
+            "set_scoring = LowestSetScoring(ascending=True)\n",
+            "oligoset_generator = OligosetGeneratorIndependentSet(\n",
+            "    opt_oligoset_size=5,\n",
+            "    min_oligoset_size=2,\n",
+            "    oligos_scoring=oligo_scoring,\n",
+            "    set_scoring=set_scoring,\n",
+            "    heuristic_selection=heuristic_selection_independent_set,\n",
+            ")\n"
+         ]
+      },
+      {
+         "cell_type": "code",
+         "execution_count": 3,
+         "metadata": {},
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "[['A_0', 'A_1', 'A_2', 1.5946, 2.3564]]\n",
+                  "[['A_0', 'A_1', 'A_2', 1.5946, 2.3564], ['A_4', 'A_2', 'A_3', 2.1467, 4.9312], ['A_0', 'A_1', 'A_2', 1.5946, 2.3564]]\n",
+                  "   oligoset_id oligo_0 oligo_1 oligo_2  set_score_lowest  set_score_sum\n",
+                  "0            0     A_0     A_1     A_2            1.5946         2.3564\n",
+                  "1            1     A_4     A_2     A_3            2.1467         4.9312\n",
+                  "   oligoset_id oligo_0 oligo_1 oligo_2  set_score_lowest  set_score_sum\n",
+                  "0            0     A_0     A_1     A_2              1.59           2.36\n",
+                  "1            1     A_4     A_2     A_3              2.15           4.93\n"
+               ]
+            }
+         ],
+         "source": [
+            "oligo_database = OligoDatabase()\n",
+            "oligo_database.database = {\n",
+            "    \"region_1\": {\n",
+            "        \"A_0\": {\"oligo\": \"GCATCTCACTAAGATGTCTGTATCTGCGTGTGCG\"},\n",
+            "        \"A_1\": {\"oligo\": \"AATTAGAAGCGTGTGCGCACATCCCGG\"},\n",
+            "        \"A_2\": {\"oligo\": \"GCATCTCACTAAGATGTCTGTATCTGCGTGTGCGCCCCCACATCC\"},\n",
+            "        \"A_3\": {\"oligo\": \"AAAGCGTGTGTTGTGTTGCGCCCCCACATCCCG\"},\n",
+            "        \"A_4\": {\"oligo\": \"AAAGCTGTTGCGCCCCCACATCC\"},\n",
+            "    }\n",
+            "}\n",
+            "oligos, oligo_scores = oligo_scoring.apply(\n",
+            "    oligo_database, region_id=\"region_1\", sequence_type=\"oligo\"\n",
+            ")\n",
+            "index = [\"A_0\", \"A_1\", \"A_2\", \"A_3\", \"A_4\"]\n",
+            "data = [\n",
+            "    [0, 1, 1, 0, 0],\n",
+            "    [1, 0, 1, 0, 0],\n",
+            "    [1, 1, 0, 1, 1],\n",
+            "    [0, 0, 1, 0, 1],\n",
+            "    [0, 0, 1, 1, 0],\n",
+            "]\n",
+            "overlapping_matrix = csr_matrix(data)\n",
+            "data = [[0, \"A_0\", \"A_1\", \"A_2\", 1.59, 2.36], [1, \"A_4\", \"A_2\", \"A_3\", 2.15, 4.93]]\n",
+            "true_sets = pd.DataFrame(\n",
+            "    data=data,\n",
+            "    columns=[\n",
+            "        \"oligoset_id\",\n",
+            "        \"oligo_0\",\n",
+            "        \"oligo_1\",\n",
+            "        \"oligo_2\",\n",
+            "        \"set_score_lowest\",\n",
+            "        \"set_score_sum\",\n",
+            "    ],\n",
+            ")\n",
+            "\n",
+            "computed_sets = oligoset_generator._get_non_overlapping_sets(\n",
+            "    overlapping_matrix=overlapping_matrix,\n",
+            "    overlapping_matrix_ids=index,\n",
+            "    oligos_scores=oligo_scores,\n",
+            "    n_sets=100,\n",
+            ")\n",
+            "print(computed_sets)\n",
+            "computed_sets[\"set_score_lowest\"] = computed_sets[\"set_score_lowest\"].round(2)\n",
+            "computed_sets[\"set_score_sum\"] = computed_sets[\"set_score_sum\"].round(2)\n",
+            "print(computed_sets)"
+         ]
       }
    ],
    "metadata": {
@@ -517,7 +665,7 @@
          "name": "python",
          "nbconvert_exporter": "python",
          "pygments_lexer": "ipython3",
-         "version": "3.10.13"
+         "version": "3.10.14"
       },
       "orig_nbformat": 4,
       "vscode": {
