--- a/tutorials/build_a_custom_pipeline.ipynb
+++ b/tutorials/build_a_custom_pipeline.ipynb
@@ -493,8 +493,8 @@
     "\n",
     "The database can also be exported for analysis in other tools or formats:\n",
     "\n",
-    "- Export as TSV: Outputs a table of oligos and their attributes (`write_database_to_table()`)\n",
-    "- Export as FASTA: Outputs oligo sequences in FASTA format (`write_database_to_fasta()`)"
+    "- **Export as TSV:** Outputs a table of oligos and their attributes (`write_database_to_table()`)\n",
+    "- **Export as FASTA:** Outputs oligo sequences in FASTA format (`write_database_to_fasta()`)"
    ]
   },
   {
@@ -503,10 +503,10 @@
    "source": [
     "The setup of the OligoDatabase is critical for several reasons:\n",
     "\n",
-    "- Centralized Data Management: Provides a structured repository for oligos and their metadata.\n",
-    "- Customizability: Allows for filtering based on the number of oligos per region and specific target regions.\n",
-    "- Scalability: Efficiently handles large genomic datasets by managing memory usage and parallel processing.\n",
-    "- Flexibility: Supports both genomic and pre-designed oligos, enabling a wide range of experimental setups.\n",
+    "- **Centralized Data Management:** Provides a structured repository for oligos and their metadata.\n",
+    "- **Customizability:** Allows for filtering based on the number of oligos per region and specific target regions.\n",
+    "- **Scalability:** Efficiently handles large genomic datasets by managing memory usage and parallel processing.\n",
+    "- **Flexibility:** Supports both genomic and pre-designed oligos, enabling a wide range of experimental setups.\n",
     "\n",
     "By defining the database structure and loading sequences with proper metadata, this step ensures that the downstream steps (e.g., filtering and scoring) are applied seamlessly and effectively."
    ]
