--- a/tutorials/5-oligoset-generation.ipynb
+++ b/tutorials/5-oligoset-generation.ipynb
@@ -17,8 +17,10 @@
     "\n",
     "In this tutorial we show how one can:\n",
     "- [Score oligos](#scoring)\n",
+    "\n",
     "- [Generate non-everlapping sets with a graph-based approach](#generating-oligosets)\n",
-    "- [Get ready-to-use oligo sets](#output-structure)"
+    "\n",
+    "- [Get ready-to-use oligo sets](#output-structure)\n"
    ]
   },
   {
