--- a/tutorials/4-specificity-filters.ipynb
+++ b/tutorials/4-specificity-filters.ipynb
@@ -9,8 +9,10 @@
     "Specificity filtering is critical in oligo design to prevent off-target binding, a common problem in experiments using short oligos. Off-target binding occurs when oligos hybridize to unintended genomic regions, reducing the accuracy and reliability of the experiment. Specificity filters identify and eliminate these problematic oligos by aligning them to reference genomic sequences and removing those that bind outside their intended regions. Specificity filters rely on sequence alignment methods such as BLAST or Bowtie to compare oligos against a reference genomic database. A list of implemented specificity filters can be found [here](https://oligo-designer-toolsuite.readthedocs.io/en/latest/_api_docs/oligo_designer_toolsuite.oligo_specificity_filter.html).\n",
     "\n",
     "In this tutorial, you'll learn how to:\n",
+    "\n",
     "- [Define a reference (background) database](#define-a-reference-database)\n",
-    "- [Filter an oligo database by specificity](#run-specificity-filters)"
+    "\n",
+    "- [Filter an oligo database by specificity](#run-specificity-filters)\n"
    ]
   },
   {
